--- a/index.html
+++ b/index.html
@@ -134,6 +134,8 @@
       <input type="range" id="volume" min="0" max="1" step="0.1" value="0.5">
     </label>
     <button id="syncSeek">Sync Seek</button>
+    <button id="playbackSpeed">Change Playback Speed</button>
+    <button id="rewind">Rewind 5s</button>
   </div>
 
   <script src="script.js"></script>
