--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style>
     :root {
       --background-color: #f5f7fa;
-      --text-color: #fff;
+      --text-color: #202020;
       --panel-background: #ffffff;
       --border-color: #ccc;
       --button-background: #007bff;
@@ -188,6 +188,7 @@
     <button id="rewind">Rewind 5s</button>
     <button id="fullscreen">Fullscreen</button>
     <button id="toggleTheme">Toggle Dark Mode</button>
+    <button id="swapVideos">Swap Videos</button>
   </div>
 
   <script src="script.js"></script>
